Add username Add leader board

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
 TODO: subscribe to levels ✅
 TODO: fix levels rate ✅
-TODO: mount file system
-TODO: add user name
-TODO: leader board
-TODO: init svn
+TODO: mount file system ✅
+TODO: add user name ✅
+TODO: leader board ✅
+TODO: init svn ✅
 TODO: levels count may go bellow 0 >.<
 
